k8s/20-services-deployments.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: food
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8079
      targetPort: 8079
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: api-gateway:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8079
              name: http
          startupProbe:
            httpGet:
              path: /health
              port: 8079
            periodSeconds: 10
            timeoutSeconds: 2

            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /health
              port: 8079
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 8079
            initialDelaySeconds: 90
            periodSeconds: 20
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: food
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: food
spec:
  selector:
    app: restaurant-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
        - name: restaurant-service
          image: restaurant-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
              name: http
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: food
spec:
  selector:
    app: order-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              name: http
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: food
spec:
  selector:
    app: payment-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: payment-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
              name: http
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: food
spec:
  selector:
    app: delivery-service
  ports:
    - name: http
      port: 8086
      targetPort: 8086
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
        - name: delivery-service
          image: delivery-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
              name: http
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 2
